# da3Dalus

./: .container-use.yaml  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  AGENTS.md  Airplane.py  AirplaneFactory.py  Ausgabeservice.py  Aussparungen.py  BooleanOperationsForLists.py  CLAUDE.md  CablePipe.py  ClassTests.py  Dockerfile  Dockerfile-conda  Einleseservice.py  Fluegel.py  Fuselage.py  FuselageFactory.py  Innenstruktur.py  LICENSE  Makefile  README.md  Readme.md  Rib.py  RibFactory.py  Ribs.py  Rumpf.py  TODO.md  Wand_erstellen.py  Wing.py  WingFactory.py  Wing_alt.py  Zipfolder.py  abmasse.py  alembic.ini  app.py  azure-pipelines.yml  (+42 more)
.beads/: issues.jsonl  metadata.json
.claude/: .gitignore  README.md  settings.json
.conda/: environments.txt
.run/: Test_CapeShapeCS.run.xml  Test_RV7ConstructionSteps.run.xml  Test_RV7ConstructionSteps_V2.run.xml  Test_WingCS.run.xml  Test_Wing_Alternative_CS.run.xml  eHawk.run.xml  wing_segment.run.xml
.serena/: project.yml
.specs/: gh-405-ui-toggle-pattern.md
Airplane/: AbstractConstructionStep.py  AbstractShapeCreator.py  AirplaneConstructionFactory.py  AirplaneFactory.py  Configuration.py  ConstructionRootNode.py  ConstructionStepNode.py  FuselageConstructionSteps.py  GeneralJSONEncoderDecoder.py  JSONStepNode.py  Readme.md  ReinforcementPipeFactory.py  WingConstructionSteps.py  full_wing.json  servo_stamp.iges
CPACSUtils/: CPACSShapeExtractor.py
Dimensions/: ShapeDimensions.py
Extra/: BooleanOperationsForLists.py  CollisionDetector.py  ConstructionStepsViewer.py  ShapeSlicer.py  ShellCreator.py  Zipfolder.py  mydisplay.py  patterns.py  tigl_extractor.py
ShapeExtractor/: ShapeExtractor.py
_alt/: Aussparungen.py  Einleseservice.py  Fluegel.py  Innenstruktur.py  Rumpf.py  Wand_erstellen.py  abmasse.py  main_funktion.py  shape_verschieben.py
airplane/: AbstractShapeCreator.py  ConstructionRootNode.py  ConstructionStepNode.py  GeneralJSONEncoderDecoder.py  JSONStepNode.py  __init__.py  types.py
alembic/: env.py
app/: logging_config.py  main.py  mcp_server.py  settings.py
avl-binary/: .gitignore  Dockerfile.avl-amd64  build_wheels.py  pyproject.toml
avl-binary/avl_binary/: __init__.py
avl-binary/tests/: test_avl_binary.py
cad_designer/: __init__.py
cadq_server/: __init__.py  cadq_server_connector.py  cq_helper.py
claude-auto-resume-output/: epic-417-queue.txt
components/: Readme.md
cq_plugins/: __init__.py
decorators/: general_decorators.py
docker/: Dockerfile.amd64.dockerfile  Dockerfile.client.amd64.dockerfile  Dockerfile.client.arm64.dockerfile  Dockerfile.jupyter.amd64.dockerfile  Dockerfile.jupyter.arm64.dockerfile  launch.sh  run.sh  run_amd64.sh
docs/: AerosandboxWingXSecFrame.adoc  CadDesignerUseCases.adoc  CoreBuildingBlocks.adoc  Readme.md  StabilityAnalysis.adoc  WingConfigRoundtripProof.adoc  WingConfiguration.adoc  WingConfiguration_claude.adoc  agent_zero_prompts.md  documentation.adoc
exports/: AS215BBMG_v4.iges  AS215BBMG_v4.step
factories/: AirplaneFactory.py  FuselageFactory.py  RibFactory.py  WingFactory.py
frontend/: .dependency-cruiser.cjs  .gitignore  CLAUDE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  plotly-gl3d.d.ts  tsconfig.json  vitest.config.ts
jupyter/: engine.step  fuselage_inlets.step  test_cad_query.ipynb  wing.step
notebooks/: Untitled.ipynb  VaseModeRibCutoutCreator.ipynb  brushless.ipynb  engine_mount.ipynb  segmentToEdge-Test.ipynb  test_cad_query_basics.ipynb  test_cad_query_shapes_functions.ipynb
parts/: Airplane.py  Fuselage.py  Rib.py  Wing.py
proben/: motor_halterung.py  probe.py  probe2.py  probe3.py  probe_Cable_pipe.py  probe_Common.py  probe_Wing_dehidral.py  probe_abtand_fluegel_fuselage.py  probe_exporter.py  probe_fuse.py  probe_fuselage_offset.py  probe_groeße.py  probe_oberflaeche_mitschint.py  probe_oberflaechen_check.py  probe_pattern.py  probe_rumpf_cutout.py  probe_rumpf_cutouts_2.py  probe_rumpf_hollow.py  probe_rumps_cutout_2.py  probe_servo_aussparung.py  probe_wing_segments.py  probe_wings_profile.py
scripts/: auto-resume-claude.sh  build_avl.py
shapeslicer/: ShapeSlicer.py
stl_exporter/: Ausgabeservice.py  Exporter.py
test/: .env  AirplaneFactory_RightWing.py  Construction_eHawk_wing.py  Construction_eHawk_wing_only_hull.py  Test_AicraftConstructionSteps.py  Test_AirplaneFactory.py  Test_CPACS_Shapes.py  Test_CablePipeFactory.py  Test_CapeShapeCS.py  Test_CollisionDector.py  Test_Configurator_wing.py  Test_CreateWingAttachmentBoltsCS.py  Test_Do228ConstructionSteps.py  Test_ElevatorConstructionSteps.py  Test_EngineCapeConstructionSteps.py  Test_EngineMountCS.py  Test_EngineMountFactory.py  Test_FuselageConstructionSteps.py  Test_FuselageReinforcementCS_.py  Test_Fuselage_Factory.py  Test_MotorMountConstructionSteps.py  Test_RV7ConstructionSteps.py  Test_RV7ConstructionSteps_V2.py  Test_ReinforcementPipe.py  Test_ServoInformation.py  Test_ServoReccesFactory.py  Test_SimpleOffsetShapeCreator.py  Test_WingCS.py  Test_WingConstructionSteps.py  Test_WingFactory.py  Test_WingSupport.py  Test_WingSupportShapeCS.py  Test_Wing_Alternative_CS.py  Test_cadquery.py  Test_tigl_extractor.py  ehawk_workflow_helpers.py  probe.py  setup_logging.py  test_airplane_configuration_serialization.py  test_avl_analysis_model.py  (+6 more)
test_cpacs/: CPACS_30_D150.xml  aircombat.xml  aircombat_original_oneprofil.xml  aircombat_original_oneprofil_mitte.xml  aircombat_skaliert_f38.xml  aircombat_skaliert_f38_one_profile.xml  aircombat_v10.xml  aircombat_v11.xml  aircombat_v12.xml  aircombat_v13.xml  aircombat_v14.xml  aircombat_v15.xml  aircombat_v2.xml  aircombat_v2_with_flaps.xml  aircombat_v3.xml  aircombat_v4.xml  aircombat_v5.xml  aircombat_v6.xml  aircombat_v7.xml  d150_rumpf_skaliert.xml  d150_rumpf_skaliert_v2.xml  fluegel_test_1008.xml  simple_aircraft.xml  simple_aircraft_skaliert.xml  simple_aircraft_skaliert_v2.xml  simple_aircraft_skaliert_v5.xml  simple_aircraft_v2.xml  simple_aircraft_v3.xml  simple_aircraft_v4.xml  simple_aircraft_v5_deleted_elemnts.xml  (+12 more)
(+1092 files in other folders)
