[project]
name = "cad-modelling-service"
version = "0.1.0"
description = ""
authors = [
    {name = "szymanski",email = "marc.szymanski@mac.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "shapely",
    "jsonpickle",
    "fastapi",
    "fastmcp>=3.0.0b2,<4.0.0",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "casadi",
    "pydantic-settings",
    "kaleido",
    "uvicorn",
    "cadquery>=2.6.1,<3.0; platform_system != 'Linux' or platform_machine != 'aarch64'",
    "aerosandbox[full]; platform_system != 'Linux' or platform_machine != 'aarch64'",
    # I tweaked this version to work with websocket>=15.0.1 which fastmcp==3.0.0b2 depends on, but only the sending side for debug cad drawings.
    # for debugging run the "ocp-vscode==3.0.1" viewer locally and it should work.
    "ocp-vscode @ git+https://github.com/szymansk/vscode-ocp-cad-viewer.git",# ; platform_system != 'Linux' or platform_machine != 'aarch64'",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.group.binary.dependencies]
nlopt = ">=2.9,<3.0"