[project]
name = "cad-modelling-service"
version = "0.1.0"
description = ""
authors = [
    {name = "szymanski",email = "marc.szymanski@mac.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "shapely",
    "jsonpickle",
    "fastapi",
    "fastmcp>=3.0.0b2,<4.0.0",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "casadi",
    "pydantic-settings",
    "kaleido",
    "uvicorn",
    "cadquery>=2.6.1,<3.0; platform_system != 'Linux' or platform_machine != 'aarch64'",
    "aerosandbox[full]; platform_system != 'Linux' or platform_machine != 'aarch64'",
    # I tweaked this version to work with websocket>=15.0.1 which fastmcp==3.0.0b2 depends on, but only the sending side for debug cad drawings.
    # for debugging run the "ocp-vscode==3.0.1" viewer locally and it should work.
    "ocp-vscode @ git+https://github.com/szymansk/vscode-ocp-cad-viewer.git",# ; platform_system != 'Linux' or platform_machine != 'aarch64'",
    "avl-binary @ https://github.com/szymansk/da3Dalus/releases/download/avl-binary-v1.0.0/avl_binary-1.0.0-py3-none-macosx_11_0_arm64.whl ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "avl-binary @ https://github.com/szymansk/da3Dalus/releases/download/avl-binary-v1.0.0/avl_binary-1.0.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64'",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13" # because of vtk9.3.1 not in py3.13 yet

[tool.poetry.group.binary.dependencies]
nlopt = ">=2.9,<3.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.1.0"
pytest-xdist = "^3.6"
ruff = "^0.15.10"
pydeps = "^3.0.3"
pyright = "^1.1.409"

[tool.pytest.ini_options]
norecursedirs = ["external"]
addopts = "--ignore=docker_smoke_test.py"
# Ensure the project root is on sys.path so `from app.*` works in
# non-installed layouts (poetry package-mode=false).
pythonpath = ["."]
# Per-test wall-clock timeout. Prevents the slow CAD E2E tests from
# hanging the whole suite indefinitely. signal method (SIGALRM on
# Unix) is required because the test hangs inside native CadQuery/OCCT
# code which the thread method cannot preempt.
timeout = 360
timeout_method = "signal"
# faulthandler_timeout dumps a traceback of every Python thread to
# stderr when a test runs longer than this many seconds. Critically,
# this uses the C-level faulthandler module which CAN interrupt native
# code to produce the dump — unlike pytest-timeout which runs in
# Python bytecode. 300s is chosen to fire *before* the pytest-timeout
# (360s) and GNU timeout (900s) kill the process, so we actually see
# where the test is stuck.
faulthandler_timeout = 300
markers = [
    "unit: pure unit test, mocked dependencies, no DB or external tooling",
    "integration: uses TestClient + in-memory DB, exercises real endpoints",
    "slow: takes more than ~10 seconds to run (default runs skip this)",
    "e2e: end-to-end workflow test (CAD + analysis pipelines, nightly tier)",
    "requires_cadquery: needs a working CadQuery installation",
    "requires_aerosandbox: needs a working Aerosandbox installation",
    "requires_avl: needs the vendored AVL binary (Avl/bin/avl)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Pre-existing code in cad_designer/, test/, and alembic/ has ~400
# accumulated violations from years of unlinted development. Including
# them in the default lint would produce mass churn. They are excluded
# here and will be linted in a dedicated cleanup pass later. New code
# under app/ is held to the full rule set below.
extend-exclude = [
    "external",
    "Avl",
    "alembic",
    "cad_designer",
    "test",
    "exports",
    "docker_smoke_test.py",
    ".claude",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (real bugs: undefined names, unused imports)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear
]
# NB: pyupgrade ("UP") rules are intentionally not in `select` because they
# propose typing-syntax migrations (Optional[X] → X | None, List → list,
# deprecated import paths) that would touch ~300 pre-existing spots and
# require individual review. They will be enabled in a dedicated cleanup
# pass once the REST API stabilisation is signed off.
#
# Rules we keep selected but ignore project-wide because the existing
# app/ code still trips them and fixing them is out of scope for the
# REST API stabilisation pass. Real correctness rules (F821, F811, etc.)
# remain active.
ignore = [
    "E501",  # line too long — enforced via formatter
    "E402",  # module-level import not at top — needed after pytest.importorskip
    "B008",  # function call in argument default — FastAPI Depends() pattern
    "B904",  # raise-without-from — cosmetic, pre-existing in 87 places
    "F401",  # unused imports — some are intentional re-exports, pre-existing
    "F841",  # unused local variable — pre-existing in tests, safe to keep
    "I001",  # unsorted imports — pre-existing in 53 places
]

[tool.ruff.format]
# Drop-in Black replacement. Keep the defaults; they match Black's style.
quote-style = "double"
indent-style = "space"
